# patmos-benchmarks

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md
Debie1-e/: CMakeLists.txt  README.patmos
Debie1-e/code/: CMakeLists.txt  class.c  health.c  health.h  hw_if.c  measure.c  ref.txt  tc_hand.c  tc_hand.h  telem.c
Debie1-e/code/harness/: harness.c
Debie1-e/code/intel/linux/: CMakeLists.txt
Debie1-e/code/sparc/gcc/: CMakeLists.txt  keyword.h
Heli/: CMakeLists.txt  heli.c  io.h
Malardalen/: CMakeLists.txt  README
Malardalen/inout/: CMakeLists.txt  Makefile  README.md  bs-test.c  bs.c  bsort100-test.c  bsort100.c  cnt-test.c  cnt.c  compress-test.c  compress.c  cover-test.c  cover.c  crc-test.c  crc.c  expint-test.c  expint.c  fac-test.c  fac.c  fdct-test.c  fdct.c  lms.c  loop3.c  minver.c  ns.c  nsichneu.c  qurt.c  sqrt.c
Malardalen/orig/: CMakeLists.txt  st.c
Malardalen/src/: CMakeLists.txt  adpcm.c  bs.c  bsort100.c  cnt.c  compress.c  cover.c  crc.c  duff.c  edn.c  expint.c  fac.c  fdct.c  fft1.c  fibcall.c  fir.c  insertsort.c  janne_complex.c  jfdctint.c  lcdnum.c  lms.c  loop3.c  matmult.c  minmax.c  ndes.c  ns.c  nsichneu.c  qurt.c  recursion.c  select.c  st.c  ud.c  whet.c
Malardalen/tacle/: CMakeLists.txt  README  adpcm_decoder.c  adpcm_encoder.c  binarysearch.c  bsort100.c  compress.c  countnegative.c  cover.c  crc.c  duff.c  edn.c  expint.c  fac.c  fdct.c  fft1.c  fibcall.c  fir.c  insertsort.c  janne_complex.c  jfdctint.c  lcdnum.c  lms.c  matmult.c  minver.c  ndes.c  petrinet.c  prime.c  qsort-exam.c  qurt.c  recursion.c  select.c  sqrt.c  st.c
Mediabench/: CMakeLists.txt
Mediabench/adpcm/src/: CMakeLists.txt  Makefile
Mediabench/epic/src/: Makefile
Mediabench/g721/src/: Makefile
Mediabench/ghostscript/src/: Makefile  arch.h  bbox.dev  bcp.dev  btoken.dev  cfd.dev  cfe.dev  cff.dev  cidfont.dev  cie.dev  cielib.dev  clbase.dev  clfile.dev  clist.dev  clpath.dev  cmaplib.dev  cmapread.dev  cmyklib.dev  cmykread.dev  colimlib.dev  color.dev  compfont.dev  dct.dev  dctd.dev  dcte.dev  devctrl.dev  dps2int.dev  dps2lib.dev  dps2read.dev  dpsand2.dev  echogs  epswrite.dev  fdecode.dev  filter.dev  fzlib.dev  genarch  genconf  hsb.dev  hsblib.dev  iscale.dev  (+75 more)
Mediabench/gsm/: CMakeLists.txt  Makefile
Mediabench/gsm/src/: CMakeLists.txt
Mediabench/jpeg/jpeg-6a/: Makefile  config.status
Mediabench/mesa/: CMakeLists.txt  Make-config
Mediabench/mpeg2/: CMakeLists.txt  Makefile
Mediabench/mpeg2/data/: options.par
Mediabench/pegwit/src/: CMakeLists.txt  Makefile  pegwit.c  sha1.c  square.c
Mediabench/pgp/rsaref/install/unix/: makefile
Mediabench/pgp/src/: 68000_32.s  Makefile  armor.c  pgp.c
Mediabench/rasta/src/: Makefile
MiBench/: CMakeLists.txt  recursion.lp
MiBench/automotive/basicmath/: CMakeLists.txt  Makefile  basicmath_tiny.c  ref_small.txt  ref_tiny.txt
MiBench/automotive/bitcount/: CMakeLists.txt  bitcnt_4.c  bitcnts.c  bitops.h  ref_output_small.txt
MiBench/automotive/qsort/: CMakeLists.txt  qsort_small.c  ref_output_small.txt
MiBench/automotive/susan/: CMakeLists.txt  ref_large.edges.pgm  ref_small.edges.pgm  ref_small.smoothing.pgm  susan.c
MiBench/consumer/jpeg/: CMakeLists.txt  ref_small.ppm
MiBench/consumer/jpeg/jpeg-6a/: cjpeg.c  djpeg.c  jdcoefct.c  rdbmp.c
MiBench/consumer/lame/: CMakeLists.txt
MiBench/consumer/lame/lame3.70/: CMakeLists.txt
MiBench/consumer/mad/: CMakeLists.txt
MiBench/consumer/mad/mad-0.14.2b/: CMakeLists.txt
MiBench/consumer/mad/mad-0.14.2b/libid3tag/: CMakeLists.txt
MiBench/consumer/mad/mad-0.14.2b/libmad/: CMakeLists.txt
MiBench/consumer/mad/mad-0.14.2b/libz/: CMakeLists.txt
MiBench/consumer/tiff-v3.5.4/: CMakeLists.txt
MiBench/consumer/tiff-v3.5.4/libtiff/: CMakeLists.txt
MiBench/consumer/tiff-v3.5.4/tools/: CMakeLists.txt
MiBench/network/dijkstra/: CMakeLists.txt  dijkstra_small.c
MiBench/network/patricia/: CMakeLists.txt  input_small.udp  patricia_test.c  ref_output_small.txt
MiBench/office/ghostscript/: CMakeLists.txt
MiBench/office/ghostscript/src/: CMakeLists.txt
MiBench/office/ispell/: CMakeLists.txt
MiBench/office/rsynth/: CMakeLists.txt  ref_tiny.au  runme_large.sh  runme_small.sh  say.c
MiBench/office/rsynth/config/: dummyplay.c
MiBench/office/stringsearch/: CMakeLists.txt  ref_output_small.txt
MiBench/security/blowfish/: CMakeLists.txt  bf.c  dbf.c  ebf.c  input_small.enc  ref_small.asc
MiBench/security/rijndael/: CMakeLists.txt  aes.h  daesxam.c  eaesxam.c  ref_output_small.enc
MiBench/security/sha/: CMakeLists.txt  ref_output_small.enc
MiBench/tacle/basicmath_small/: CMakeLists.txt
MiBench/tacle/bitcount/: CMakeLists.txt
MiBench/tacle/dijkstra/: CMakeLists.txt
MiBench/tacle/qsort/: CMakeLists.txt
MiBench/tacle/rijndael_decoder/: CMakeLists.txt
MiBench/tacle/rijndael_encoder/: CMakeLists.txt
MiBench/tacle/sha/: CMakeLists.txt
MiBench/tacle/susan/: CMakeLists.txt  wccfile.c
MiBench/telecomm/CRC32/: CMakeLists.txt  crc_32.c  ref_small.txt
MiBench/telecomm/FFT/: CMakeLists.txt  input_large.inv.txt  input_large.txt  input_small.inv.txt  input_small.txt  input_tiny.inv.txt  input_tiny.txt  main.c  ref_tiny.inv.txt  ref_tiny.txt  runme_large.sh
MiBench/telecomm/adpcm/data/: be_small.pcm  ref_be_small.pcm  ref_le_small.pcm  ref_small.adpcm
MiBench/telecomm/adpcm/src/: CMakeLists.txt  rawcaudio.c  rawdaudio.c
MiBench/telecomm/gsm/: CMakeLists.txt
MiBench/telecomm/gsm/inc/: config.h
MiBench/telecomm/gsm/src/: CMakeLists.txt  toast.c
PapaBench-0.4/: CMakeLists.txt  README.patmos
TCAS/: CMakeLists.txt  tcas-a.c  tcas-b.c
WTC14-misc/: CMakeLists.txt  (+2 more)
gcc.c-torture/: CMakeLists.txt  FailBuildTarget.txt  FailHost.txt  FailO0.txt  Makefile.triage  NoHwTest.txt
tests/C/: CMakeLists.txt  alloca.c  coop.c  iotest.c  jumptable.c  printf.c  printf_long.c  setcc.c  setjmp.c  smallarray.c  stackarray.c  static.c  triangle1.c  triangle2.c  triangle3.c  uart.c  vaargs.c
tests/platin/: 02-clang-annotation.c  02-clang-flowfact.c  03-clang-loopbound-pragma.c  22-call-any.c  CMakeLists.txt  test-visualize.rb
(+67 files in other folders)
