add_subdirectory(epic)
add_subdirectory(g721)
add_subdirectory(mesa)
add_subdirectory(mpeg2)
add_subdirectory(pegwit)
add_subdirectory(rasta)

# Already in MiBench, therefore we skip them here
#add_subdirectory(adpcm)
#add_subdirectory(ghostscript)
#add_subdirectory(gsm)
#add_subdirectory(jpeg)
#add_subdirectory(pgp)

