add_subdirectory(lame3.70)

#run_io(mibench-lame_small ${CMAKE_CURRENT_BINARY_DIR}/lame3.70/lame
#        ${CMAKE_CURRENT_SOURCE_DIR}/small.wav
#        output_small.mp3
#        ${CMAKE_CURRENT_SOURCE_DIR}/ref_small.mp3)

#run_io(mibench-lame_large ${CMAKE_CURRENT_BINARY_DIR}/lame3.70/lame
#        ${CMAKE_CURRENT_SOURCE_DIR}/large.wav
#        output_large.mp3
#        ${CMAKE_CURRENT_SOURCE_DIR}/ref_large.mp3)

